crates/strider-analyze/tests/snapshots/v2__aarch64be__memory__tagged_union_read.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu8 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="Load u8\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "13" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v14" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "2" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
}
